
        nsd/return.c: Ns_ConnSetRequiredHeaders is broken, moved to Deperecated status

        nsd/conn.c: Added new public function Ns_ConnContentSize for cases when
        Ns_ConnContent returns binary data

        modules/nsphp: Updated to latest API, supports streaming and does not use
        deperecated functions anymore

        modules/nstftpd: ported to new driver API

2008-10-19  Vlad Seryakov <seryakov@users.sf.net>

	nsd/conn.c: Fixed bug in ns_conn content, it returned as string and did not
	handle binary content, now result is byte array

	include/ns.h:
	nsd/nsd.h:
	nsd/queue.c:
	nsd/driver.c:
	nsd/op.c:
	nsd/filter.c:
	nsd/urlspace.c: Changed to handle non HTTP drivers differently, driver now has
	special requestProc field to be called very early in the connection thread. The result
	is the same as for regular filters but this is optional. No need to hack request
	anymore, it seemed very weird. All the code that handles request is now checking for
	not NULL values before using, mostly url space routines. Now, it is valid to have request
	structure NULL values, nothing will be called, not handlers will be invoked. 
	Non HTTP drivers will have to provide requestProc, otherwise nothing will happen and 
	nobody will notice this driver.

2008-10-14  Vlad Seryakov <seryakov@users.sf.net>

        * include/ns.h:
        * nsd/nsd.h:
        * modules/nsudp/nsudp.c: Ported UDP socket module to new API.
        Updated Ns_Sock/Sock structures to expose sockaddr_in sa, so drivers can
        update it. This is the case for UDP drivers.

        # include/ns.h:
        * nsd/driver.c: Reintroduced Ns_DriverSetRequest as the way to set request by the
        non-HTTP driver. This is questionable but at this moment i do not have other solution.
        Also added new NS_DRIVER_NOPARSE flag to tell the driver no to parse incoming data. This way
        driver thread still read data from the socket into its own buffers instead of a driver to allocate